<resources>
    <string name="app_name">MathCalc_v2</string>
    <string name="txtZeroDec"></string>
    <string name="txtZero">0</string>
    <string name="txtClear">C</string>
    <string name="txtRemDig">\u232b</string>
    <string name="txtOne">1</string>
    <string name="txtTwo">2</string>
    <string name="txtThree">3</string>
    <string name="txtFour">4</string>
    <string name="txtFive">5</string>
    <string name="txtSix">6</string>
    <string name="txtSeven">7</string>
    <string name="txtEight">8</string>
    <string name="txtNine">9</string>
    <string name="txtDecimal">.</string>
    <string name="txtPosNeg">+/-</string>
    <string name="txtEquals">=</string>
    <string name="txtAddition">+</string>
    <string name="txtSubtraction">-</string>
    <string name="txtMultiplication">*</string>
    <string name="txtDivision">/</string>
</resources>