<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:gravity="bottom">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tvWorking"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:layout_span="4"
                android:gravity="bottom|right"
                android:inputType="numberDecimal"
                android:text="@string/txtZero"
                android:textColor="#000"
                android:textSize="36dp" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:layout_span="4"
                android:gravity="bottom|right"
                android:inputType="numberDecimal"
                android:text="@string/txtZero"
                android:textColor="#000"
                android:textSize="60dp" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnRemDig"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#000"
                android:gravity="center"
                android:text="@string/txtRemDig"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:layout_span="2"
                android:backgroundTint="#000"
                android:gravity="center"
                android:text="@string/txtClear"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#444"
                android:gravity="center"
                android:text="@string/txtDivision"
                android:textColor="@color/white"
                android:textSize="25dp" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtSeven"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtEight"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtNine"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#444"
                android:gravity="center"
                android:text="@string/txtMultiplication"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtFour"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtFive"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtSix"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#444"
                android:gravity="center"
                android:text="@string/txtSubtraction"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtOne"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtTwo"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtThree"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#444"
                android:gravity="center"
                android:text="@string/txtAddition"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnPosNeg"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#000"
                android:gravity="center"
                android:text="@string/txtPosNeg"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#AAA"
                android:gravity="center"
                android:text="@string/txtZero"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="#000"
                android:gravity="center"
                android:text="@string/txtDecimal"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:layout_span="1"
                android:backgroundTint="#444"
                android:gravity="center"
                android:text="@string/txtEquals"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>